examples/core/src/main/java/org/jbehave/examples/core/stories/failing/skip_story_if_given_story_failed.story
GivenStories: org/jbehave/examples/core/stories/failing/non_successful.story

Scenario: A scenario that is not executed because it followed a failed given story

Given I do nothing
